# network-monitor-server

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  dev.env  e2e.env  initialize_db.sh  initialize_e2e_db.sh  logging.yml  pyproject.toml  start.py  unittest.env
.github/workflows/: build-test.yml  python-app.yml
alembic/: env.py
alembic/versions/: a0643f968144_create_initial_schema.py  f769380df17e_initial_database.py
monitor/: __init__.py  app.py
monitor/authentication/: jwt.py
monitor/database/: db.py  fields.py  models.py
monitor/exceptions/: __init__.py  exceptions.py
monitor/middleware/: __init__.py
monitor/repository/: __init__.py  host.py  user.py
monitor/route/: __init__.py  authorization.py  exceptions.py  host.py  jwt_utils.py  login.py  permissions.py  user.py
monitor/schema/: __init__.py  base.py  host.py  login.py  password_validator.py  user.py
monitor/service/: __init__.py  host.py  login.py  user.py
monitor/settings/: __init__.py  app_settings.py  settings.py
resources/templates/email/: healthcheck_report.html
src/monitor/: __init__.py  app.py  request_context.py
src/monitor/appevents/: __init__.py  events.py
src/monitor/authentication/: jwt.py
src/monitor/database/: __init__.py  db.py  models.py  utils.py
src/monitor/exceptions/: exceptions.py
src/monitor/middleware/: __init__.py  exception.py  request_logging.py
src/monitor/operations/: __init__.py  email.py  ping.py
src/monitor/operations/email/: __init__.py  email_notification.py  health_check_report_email.py  schema.py  template_data.py
src/monitor/repository/: __init__.py  host.py  host_health_check.py  repository.py  scheduled_job.py  user.py
src/monitor/route/: __init__.py  authorization.py  host.py  login.py  scheduled_job.py
src/monitor/scheduler/: __init__.py  ping_job.py  scheduler.py
src/monitor/scheduler/jobs/: ping_job.py
src/monitor/schema/: __init__.py  host.py  host_health_check.py  jwt.py  scheduled_job.py  user.py
src/monitor/service/: __init__.py  health_check.py  host.py  login.py  ping.py  user.py
src/monitor/settings/: app_settings.py
src/scripts/: admin.py  readme.md
test/: utils.py
test/e2e/: commands.py  conftest.py  fixtures.py  test_login_flow.py  test_user_flow.py  user_flow.py  utils.py
test/e2e/tests/: test_host_flow.py  test_login_flow.py
test/http_requests/: Hosts.http  Login.http
test/unit/: conftest.py  utils.py
test/unit/authentication/: test_jwt.py
test/unit/database/: test_models.py
test/unit/fixtures/: fixtures.py
test/unit/route/: base_test.py  test_host.py  test_jwt_utils.py  test_login.py  test_user.py
test/unit/routes/: base_test.py  test_host.py  test_user.py
test/unit/schema/: test_password_validator.py  test_user.py
test/unit/tests/authentication/: test_jwt.py
test/unit/tests/operations/: test_ping.py
tests/database/: init_e2e_database.sql
tests/e2e/: api_commands.py  auth_commands.py  commands.py  request_utils.py
tests/e2e/test/: test_health_check_scheduled_job.py  test_host_flow.py  test_login_flow.py
tests/http_requests/: Login.http  User.http  http-client.env.json
tests/test/e2e/: commands.py  conftest.py  utils.py
tests/test/unit/: conftest.py
tests/unit/: conftest.py
tests/unit/fixtures/: fixtures.py
(+27 files in other folders)
