[tool.poetry]
name = "monitor-daemon"
version = "0.1.0"
description = ""
authors = ["Stewart Hector <stewart@stewarthector.com>"]
packages = [{include = "monitor", from = "src"}]
repository = "https://github.com/catbreathx/network-monitor-server.git"

[tool.poetry.dependencies]
SQLAlchemy = "1.4.39"
alembic = "^1.8.1"
apscheduler = "^3.9.1"
fastapi = "^0.86"
gunicorn = "^20.1.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
ping3 = "^4.0.3"
psycopg2 = "^2.9.3"
pydantic = {extras = ["dotenv"], version = "^1.9.1"}
python = "^3.10"
python-dotenv = "^0.21.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
starlette-context = "0.3.4"
uvicorn = {extras = ["standard"], version = "^0.19.0"}


[tool.poetry.dev-dependencies]
autopep8 = "^2.0.0"
black = "^22.6.0"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
requests = "^2.28.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ['src', 'test/unit']

[tool.isort]
profile = "black"
