[tool.poetry]
name = "Network Monitor"
version = "0.1.0"
description = ""
authors = ["Stewart Hector <stewart@stewarthector.com>"]
packages = [{include = "monitor", from = "src"}]
repository = "https://github.com/catbreathx/network-monitor-server.git"

[tool.poetry.dependencies]
SQLAlchemy = "2.0.4"
alembic = "^1.9.4"
apscheduler = "^3.9.1"
click = "^8.1.3"
fastapi = "^0.86"
fastapi-mail = "1.2.0"
gunicorn = "^20.1.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
ping3 = "^4.0.3"
psycopg = {extras = ["binary"], version="^3.1.8"}
pydantic = {extras = ["dotenv"], version = "^1.9.1"}
python = "^3.10"
python-dotenv = "^1.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
starlette-context = "0.3.6"
uvicorn = {extras = ["standard"], version = "^0.20.0"}

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.1"
black = "^23.1.0"
flake8 = "^6.0.0"
pre-commit = "^3.1.0"
pytest-asyncio = "^0.20.2"
requests = "^2.28.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ['src', 'tests/unit', 'tests/e2e']

[tool.isort]
profile = "black"
